--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/jeans_one?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -11,7 +11,8 @@ spring.devtools.restart.enabled=true
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
+spring.devtools.livereload.enabled=true
 
 #mybatis
-mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #mapper 내에 있는 모든 폴더를 다쓰고 모든 xml문서를 다쓰겠다
