--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,25 @@ spring.datasource.password=root
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.devtools.restart.enabled=true
+
 
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
+
+#devtools
 spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
+spring.freemarker.cache=false
+spring.thymeleaf.cache=false
+
+
 
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #\uBAA8\uB4E0 xml\uBB38\uC11C\uB97C \uB2E4\uC4F0\uACA0\uB2E4
+
+
+
 
 
