--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&
 spring.datasource.username=root
 spring.datasource.password=root
 
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
+#\uC774\uAC70 \uD574\uC57C html \uD30C\uC77C\uBD88\uB7EC\uC624\uAE30 \uAC00\uB2A5\uD568
+#spring.mvc.view.prefix=/static/html/
+#spring.mvc.view.suffix=.html
 
+#\uC815\uC801\uC790\uC6D0 \uACBD\uB85C\uC124\uC815
 spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 
 #devtools
