--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://3.34.174.200:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=rmdwjd@12#
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
-#\uC774\uAC70 \uD574\uC57C html \uD30C\uC77C\uBD88\uB7EC\uC624\uAE30 \uAC00\uB2A5\uD568
-#spring.mvc.view.prefix=/static/html/
-#spring.mvc.view.suffix=.html
 
 #\uC815\uC801\uC790\uC6D0 \uACBD\uB85C\uC124\uC815
 spring.mvc.static-path-pattern=/static/**
