--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://3.34.174.200:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=rmdwjd@12#
+spring.datasource.password=root
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
 
 #\uC815\uC801\uC790\uC6D0 \uACBD\uB85C\uC124\uC815
 spring.mvc.static-path-pattern=/static/**
