--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
+	// https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
+	compile group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
+
+
 	compile('org.apache.tomcat.embed:tomcat-embed-jasper')//jsp 사용
 	compile('javax.servlet:jstl')//jsp 사용
 }
