--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://3.34.198.138:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -26,4 +26,4 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
-directory=C:\\Users\\1\\SpringBootImageFile
+directory=D:\\1\\SpringBootImageFile
