--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://13.125.21.192:4306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1801167
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 #\uC815\uC801\uC790\uC6D0 \uACBD\uB85C\uC124\uC815
