--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 #\uC815\uC801\uC790\uC6D0 \uACBD\uB85C\uC124\uC815
@@ -19,8 +19,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
 
-directory=D:\\1\\SpringBootImageFile
-
+#directory=D:\\1\\SpringBootImageFile
+directory=C:\\Users\\1\\SpringBootImageFile
 
 #\uAE30\uBCF8 \uC774\uBBF8\uC9C0 \uD3F4\uB354. \uC720\uC800\uAC00 \uC124\uC815\uD558\uC9C0 \uC54A\uC740 \uC774\uBBF8\uC9C0\uC5D0 \uB300\uD574 \uAE30\uBCF8\uC801\uC778 \uC774\uBBF8\uC9C0\uB97C \uC81C\uACF5\uD558\uB294 \uD3F4\uB354\uB2E4. directory\uC5D0 \uD558\uC704 \uD3F4\uB354\uC774\uB2E4.
 defaultdirectory=defaultimagefiles
