--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&
 spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.password=1234
-#directory=D:\\1\\SpringBootImageFile
+
+#\uC724\uC131\uC77C \uB85C\uCEEC\uC124\uC815
+directory=D:\\1\\SpringBootImageFile
+
+#\uAE40\uADDC\uC9C4 \uB85C\uCEEC\uC124\uC815
 #directory=D:\\SpringBootImageFile
-directory=C:\\Users\\1\\SpringBootImageFile
+#directory=C:\\Users\\1\\SpringBootImageFile
 ##\uAE30\uBCF8 \uC774\uBBF8\uC9C0 \uD3F4\uB354. \uC720\uC800\uAC00 \uC124\uC815\uD558\uC9C0 \uC54A\uC740 \uC774\uBBF8\uC9C0\uC5D0 \uB300\uD574 \uAE30\uBCF8\uC801\uC778 \uC774\uBBF8\uC9C0\uB97C \uC81C\uACF5\uD558\uB294 \uD3F4\uB354\uB2E4. directory\uC5D0 \uD558\uC704 \uD3F4\uB354\uC774\uB2E4.
 defaultdirectory=defaultimagefiles
 #\uC11C\uBC84\uC640 \uB85C\uCEEC\uC774 \uACBD\uB85C \uC124\uC815 \uD558\uB294\uAC8C \uB2EC\uB77C\uC11C \uACBD\uB85C\uB97C \uB2E4\uB974\uAC8C \uC90C
