--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@
 .gradle/native/
 .gradle/wrapper/
 .gradle/daemon/
+#빌드하면 자동으로 생기는 것
+build/**
+.gradle/**
+.idea/**
 #노드모듈 git 에서 제외
 src/main/resources/node_modules/**
