--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#빌드하면 자동으로 생기는 것
+build/
+
 #gradle 파일들 git 에서 제외
 .gradle/5.6.4/
 .gradle/buildOutputCleanup
@@ -5,5 +8,7 @@
 .gradle/native/
 .gradle/wrapper/
 .gradle/daemon/
+
+
 #노드모듈 git 에서 제외
 src/main/resources/node_modules/**
