pm 이랑 합치기전

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,26 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-##로컬용
-#spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#directory=D:\\1\\SpringBootImageFile
-#defaultdirectory=defaultimagefiles
-#route=\\
+#로컬용
+spring.datasource.url=jdbc:mysql://localhost:3306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+directory=D:\\1\\SpringBootImageFile
+defaultdirectory=defaultimagefiles
+route=\\
 
 
 
 #서버용
-spring.datasource.url=jdbc:mysql://13.125.21.192:4306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1801167
-directory=/app/git/images
-
-#기본 이미지 폴더. 유저가 설정하지 않은 이미지에 대해 기본적인 이미지를 제공하는 폴더다. directory에 하위 폴더이다.
-defaultdirectory=default
-#서버와 로컬이 경로 설정 하는게 달라서 경로를 다르게 줌
-route=/
+#spring.datasource.url=jdbc:mysql://13.125.21.192:4306/jeans?characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1801167
+#directory=/app/git/images
+#
+##기본 이미지 폴더. 유저가 설정하지 않은 이미지에 대해 기본적인 이미지를 제공하는 폴더다. directory에 하위 폴더이다.
+#defaultdirectory=default
+##서버와 로컬이 경로 설정 하는게 달라서 경로를 다르게 줌
+#route=/
 
 
 #공통설정
